# aula20_bootcamp

./: README.md  pyproject.toml
backend/: database.py  test.db
